--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   instagram:
   impactstory: #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm:
-  linkedin:
+  linkedin: "misalraj"
   # orcid: "http://orcid.org/yourorcidurl"
   pinterest:
   soundcloud:
@@ -108,6 +108,7 @@ author:
   steam:
   tumblr:
   twitter: "misalraj_"
+  kaggle: "misalraj"
   vine:
   weibo:
   xing:
