--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale: "en-US"
 title: "Misal Raj"
 title_separator: "-"
-name: &name "Misal Raj"
+name: &name ""
 description: &description "Data Scientist & Machine learning"
 url: https://misalraj.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: "" # the subpath of your site, e.g. "/blog"
